--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "node": ">=6.5.0"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
-    "express": "^4.9.4",
-    "jade": "^1.7.0",
-    "lodash": "^4.17.5",
-    "serve-static": "^1.10.1",
-    "winston": "^2.4.2"
+    "bluebird": "^3.7.2",
+    "express": "^4.17.1",
+    "pug": "^2.0.4",
+    "lodash": "^4.17.15",
+    "serve-static": "^1.14.1",
+    "winston": "^3.2.1"
   }
 }
